@@ -254,10 +254,6 @@ void CGUITabControl::refreshSprites()
 //! Adds a tab
 IGUITab* CGUITabControl::addTab(const wchar_t* caption, s32 id)
 {
-	IGUISkin* skin = Environment->getSkin();
-	if (!skin)
-		return 0;
-
 	CGUITab* tab = new CGUITab(Tabs.size(), Environment, this, calcTabPos(), id);
 
 	tab->setText(caption);
@@ -315,6 +311,59 @@ void CGUITabControl::addTab(CGUITab* tab)
 	}
 }
 
+//! Insert the tab at the given index
+IGUITab* CGUITabControl::insertTab(s32 idx, const wchar_t* caption, s32 id)
+{
+	if ( idx < 0 || idx > (s32)Tabs.size() )	// idx == Tabs.size() is indeed ok here as core::array can handle that
+		return NULL;
+
+	CGUITab* tab = new CGUITab(idx, Environment, this, calcTabPos(), id);
+
+	tab->setText(caption);
+	tab->setAlignment(EGUIA_UPPERLEFT, EGUIA_LOWERRIGHT, EGUIA_UPPERLEFT, EGUIA_LOWERRIGHT);
+	tab->setVisible(false);
+	Tabs.insert(tab, (u32)idx);
+
+	if (ActiveTab == -1)
+	{
+		ActiveTab = 0;
+		tab->setVisible(true);
+	}
+
+	for ( u32 i=(u32)idx+1; i < Tabs.size(); ++i )
+	{
+		Tabs[i]->setNumber(i);
+	}
+
+	recalculateScrollBar();
+
+	return tab;
+}
+
+//! Removes a tab from the tabcontrol
+void CGUITabControl::removeTab(s32 idx)
+{
+	if ( idx < 0 || idx >= (s32)Tabs.size() )
+		return;
+
+	Tabs[(u32)idx]->drop();
+	Tabs.erase((u32)idx);
+	for ( u32 i=(u32)idx; i < Tabs.size(); ++i )
+	{
+		Tabs[i]->setNumber(i);
+	}
+}
+
+//! Clears the tabcontrol removing all tabs
+void CGUITabControl::clear()
+{
+	for (u32 i=0; i<Tabs.size(); ++i)
+	{
+		if (Tabs[i])
+			Tabs[i]->drop();
+	}
+	Tabs.clear();
+}
 
 //! Returns amount of tabs in the tabcontrol
 s32 CGUITabControl::getTabCount() const
@@ -368,9 +417,15 @@ bool CGUITabControl::OnEvent(const SEvent& event)
 				// todo: dragging tabs around
 				return true;
 			case EMIE_LMOUSE_LEFT_UP:
-				if (selectTab(core::position2d<s32>(event.MouseInput.X, event.MouseInput.Y)))
+			{
+				s32 idx = getTabAt(event.MouseInput.X, event.MouseInput.Y);
+				if ( idx >= 0 )
+				{
+					setActiveTab(idx);
 					return true;
+				}
 				break;
+			}
 			default:
 				break;
 			}
@@ -402,7 +457,7 @@ void CGUITabControl::scrollRight()
 	recalculateScrollBar();
 }
 
-s32 CGUITabControl::calcTabWidth(s32 pos, IGUIFont* font, const wchar_t* text, bool withScrollControl)
+s32 CGUITabControl::calcTabWidth(s32 pos, IGUIFont* font, const wchar_t* text, bool withScrollControl) const
 {
 	if ( !font )
 		return 0;
@@ -473,55 +528,6 @@ bool CGUITabControl::needScrollControl(s32 startIndex, bool withScrollControl)
 			return true;
 	}
 
-	return false;
-}
-
-
-bool CGUITabControl::selectTab(core::position2d<s32> p)
-{
-	IGUISkin* skin = Environment->getSkin();
-	IGUIFont* font = skin->getFont();
-
-	core::rect<s32> frameRect(AbsoluteRect);
-
-	if ( VerticalAlignment == EGUIA_UPPERLEFT )
-	{
-		frameRect.UpperLeftCorner.Y += 2;
-		frameRect.LowerRightCorner.Y = frameRect.UpperLeftCorner.Y + TabHeight;
-	}
-	else
-	{
-		frameRect.UpperLeftCorner.Y = frameRect.LowerRightCorner.Y - TabHeight;
-	}
-
-	s32 pos = frameRect.UpperLeftCorner.X + 2;
-
-	if (!frameRect.isPointInside(p))
-		return false;
-
-	for (s32 i=CurrentScrollTabIndex; i<(s32)Tabs.size(); ++i)
-	{
-		// get Text
-		const wchar_t* text = 0;
-		if (Tabs[i])
-			text = Tabs[i]->getText();
-
-		// get text length
-		s32 len = calcTabWidth(pos, font, text, true);
-		if ( ScrollControl && pos+len > UpButton->getAbsolutePosition().UpperLeftCorner.X - 2 )
-			return false;
-
-		frameRect.UpperLeftCorner.X = pos;
-		frameRect.LowerRightCorner.X = frameRect.UpperLeftCorner.X + len;
-
-		pos += len;
-
-		if (frameRect.isPointInside(p))
-		{
-			setActiveTab(i);
-			return true;
-		}
-	}
 	return false;
 }
 
@@ -862,6 +868,54 @@ EGUI_ALIGNMENT CGUITabControl::getTabVerticalAlignment() const
 	return VerticalAlignment;
 }
 
+
+s32 CGUITabControl::getTabAt(s32 xpos, s32 ypos) const
+{
+	core::position2di p(xpos, ypos);
+	IGUISkin* skin = Environment->getSkin();
+	IGUIFont* font = skin->getFont();
+
+	core::rect<s32> frameRect(AbsoluteRect);
+
+	if ( VerticalAlignment == EGUIA_UPPERLEFT )
+	{
+		frameRect.UpperLeftCorner.Y += 2;
+		frameRect.LowerRightCorner.Y = frameRect.UpperLeftCorner.Y + TabHeight;
+	}
+	else
+	{
+		frameRect.UpperLeftCorner.Y = frameRect.LowerRightCorner.Y - TabHeight;
+	}
+
+	s32 pos = frameRect.UpperLeftCorner.X + 2;
+
+	if (!frameRect.isPointInside(p))
+		return -1;
+
+	for (s32 i=CurrentScrollTabIndex; i<(s32)Tabs.size(); ++i)
+	{
+		// get Text
+		const wchar_t* text = 0;
+		if (Tabs[i])
+			text = Tabs[i]->getText();
+
+		// get text length
+		s32 len = calcTabWidth(pos, font, text, true);
+		if ( ScrollControl && pos+len > UpButton->getAbsolutePosition().UpperLeftCorner.X - 2 )
+			return -1;
+
+		frameRect.UpperLeftCorner.X = pos;
+		frameRect.LowerRightCorner.X = frameRect.UpperLeftCorner.X + len;
+
+		pos += len;
+
+		if (frameRect.isPointInside(p))
+		{
+			return i;
+		}
+	}
+	return -1;
+}
 
 //! Returns which tab is currently active
 s32 CGUITabControl::getActiveTab() const
